1、validate校验工具开发 2、系统异常处理、特定参数传递异常处理实现类完成 3、修改配置文件分为local和prod的生产环境和开发环境 4、增加readme.md

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,7 @@ server:
   port: 8045
 spring:
   profiles:
-    active: local
-  main:
-    banner-mode: "off"
+     active: local
+logging:
+  level:
+    root: INFO
