--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,17 @@
             <version>1.9.13</version>
         </dependency>
 
+        <!--工具commons-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
